fixed a few alignment issues

--- a/style.css
+++ b/style.css
@@ -87,11 +87,10 @@ nav ul li a:hover::after{
 
  /* about */
  #about{
-    padding-top: 70px;
-    padding-left: 40px;
+    padding: 70px;
+    padding-bottom: 0;
     color: #ababab;
     width: 100%;
-    height: 700px;
  }
 
  .row{
@@ -101,13 +100,13 @@ nav ul li a:hover::after{
  }
 
  .about-col-1{
-    flex-basis: 20%;
+    flex-basis: 40%;
  }
 
  .about-col-1 img{
-    height: 70%;
+    width: 90%;
     border-radius: 15px;
-    margin-left: 56px;
+    align-content: center;
  }
 
  .about-col-2{
